<resources>
    <string name="app_name">Challenge Chapter 3 Anti Bug</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kecepatan_anda">Kecepatan anda :</string>
    <string name="waktu_tempuh">Waktu Tempuh :</string>
    <string name="gravitasi">Gravitasi :</string>
    <string name="hasil">Hasil :</string>
    <string name="go_to_screen_4">Go To Screen 4</string>
    <string name="screen_3">Screen 3</string>
    <string name="nama_anda">Nama Anda</string>
    <string name="screen_2">Screen 2</string>
    <string name="masukan_nama">Masukan Nama Anda</string>
    <string name="go_to_screen_3">Go To Screen 3</string>
    <string name="screen_1">Screen 1</string>
    <string name="go_to_screen_2">Go To Screen 2</string>
    <string name="screen_4">Screen 4</string>
    <string name="kecepatan_awal_km_jam">Kecepatan awal : m/s</string>
    <string name="waktu_tempuh_detik">Waktu Tempuh Tertinggi : detik</string>
    <string name="gravitasi_m_s2">Gravitasi : m/s2</string>
    <string name="go_to_screen_5">Back To Screen 3</string>
    <string name="aplikasi_menghitung_jarak_ketinggian">Aplikasi Menghitung Jarak Ketinggian</string>
    <string name="siapakah_nama_anda">Siapakah Nama Anda ?</string>
    <string name="masukan_data_anda">Masukan Data Anda</string>
</resources>