<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentKetiga"
    android:orientation="vertical">

    <TextView
        android:id="@+id/pop_tiga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/screen_3"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_name"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/nama_anda"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tv_kecepatan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_kecepatan"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/kecepatan_anda"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_waktu_tempuh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_waktu_tempuh"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/waktu_tempuh"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_gravitasi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.202"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_gravitasi"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/gravitasi"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_hasil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_hasil"
        android:layout_width="370dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/hasil"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_gts_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_gts_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_to_screen_4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>